Correction padding et overflow du viewer Discord
Correction du problème de overflow générer par Fomantic lorsque le composant été à detachable: false

--- a/src/app/applications/discord/discord.component.sass
+++ b/src/app/applications/discord/discord.component.sass
@@ -1,6 +1,7 @@
 .discord
   height: 100vh
-  top: 0 !important
+  top: 0
+  left: 0
   overflow: hidden
   max-height: 100vh
   max-width: 100vw
@@ -13,5 +14,5 @@
     width: 100%
 
 // Reset du style du composant Fomantic-UI
-.ui.legacy.legacy.modal
-  left: inherit !important
+.ui.fullscreen.modal
+  left: inherit
